--- a/app/www/azmet-in-real-time.css
+++ b/app/www/azmet-in-real-time.css
@@ -179,12 +179,24 @@
   padding-top: 4px;
 }
 
-.sls-latest-data-title {
-  padding-top: 72px;
+/* .sls-latest-data-title {
+  margin-top: 4.5rem;
 }
+
+.sls-latest-data-update {
+  color: #191919;
+  margin-top: 1rem;
+} */
 
 
 /* id */
+
+#cardGraph {
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+}
 
 #refreshDataButton {
   background-color: transparent; 
