--- a/app/www/azmet-in-real-time.css
+++ b/app/www/azmet-in-real-time.css
@@ -218,6 +218,13 @@
   color: #fff;
 }
 
+#slsCardBody {
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+}
+
 /* #nwsDownloadCSV {
   background-color: transparent; 
   border-color: #001C48; 
