graph style, split card graph and layout fxns

--- a/app/www/azmet-in-real-time.css
+++ b/app/www/azmet-in-real-time.css
@@ -76,6 +76,11 @@
   padding-top: 12px;
 }
 
+/* https://github.com/plotly/plotly.js/issues/2342 */
+.hovertext {
+  fill-opacity: 0.9;
+}
+
 .main.bslib-gap-spacing.html-fill-container {
   padding-bottom: 24px;
   padding-left: 24px;
