--- a/app/www/azmet-in-real-time.css
+++ b/app/www/azmet-in-real-time.css
@@ -66,6 +66,10 @@
   padding-top: 24px;
 }
 
+.data-options-title {
+  padding-bottom: 1rem !important;
+}
+
 .help-block {
   color: #989898 !important;
   font-size: 1rem;
@@ -179,13 +183,8 @@
   margin-top: 0.25rem;
 }
 
-.sls-card-layout-help-text {
-  color: #989898 !important;
-  font-size: 1rem;
-  font-style: italic;
-  font-weight: normal;
-  padding-bottom: 4px;
-  padding-top: 12px;
+.sls-card-layout-title {
+  padding-bottom: 1rem !important;
 }
 
 .sls-card-layout-title {
@@ -197,7 +196,7 @@
   font-family: monospace !important;
   font-size: 0.9rem;
   margin-bottom: 12px;
-  margin-top: 12px;
+  /* margin-top: 12px; */
 }
 
 
